# tn

./: .dir-locals.el  .gitignore  LICENSE  README  README.md  journal.cabal  stack.yaml  tn.cabal  tn.hs
lib/: Tn.hs
lib/Control/Applicative/: AltConcat.hs
lib/Tn/: Errata.hs  Journal.hs  Paths.hs
lib/Utility/: Tn.hs
lib/Utility/Tn/: ArgParsing.hs  Types.hs
skel/: Skel.hs  gplnotice.txt
spec/: Spec.hs
src/: Main.hs
src/Tn/: Meat.hs  Potatoes.hs  Static.hs
