name:                tn
version:             2.0.0.0
synopsis:            A simple daily journal program
description:
  tn is a simple program to keep journals, licensed under the FreeBSD license.
license:             BSD2
license-file:        LICENSE
author:              Peter Harpending
maintainer:          peter@harpending.org
bug-reports:         https://github.com/pharpend/tn
copyright:           Copyright (c) 2014-2015, Peter Harpending.
category:            Text
build-type:          Simple
cabal-version:       >=1.10

executable tn
  main-is:             tn.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans -O2
  build-depends:     
     aeson
   , aeson-pretty
   , base ==4.8.*        
   , bytestring
   , conduit >=1.2.3                      
   , conduit-extra >=1.1                  
   , conduit-combinators                  
   , directory                            
   , editor-open ==0.3.*
   , optparse-applicative
   , process >=1.2                        
   , resourcet
   , safe                                 
   , text                                 
   , time                                 
   , unordered-containers                           

source-repository head
  type: git
  location: https://github.com/pharpend/tn.git

source-repository this
  type: git
  location: https://github.com/pharpend/tn.git
  tag: 2.0.0.0
                  
