name:                tn
version:             3.0.0.0
synopsis:            A simple daily journal program
description:
  tn is a simple program to keep journals, licensed under the FreeBSD license.
license:             BSD2
license-file:        LICENSE
author:              Peter Harpending
maintainer:          peter@harpending.org
bug-reports:         https://github.com/pharpend/tn/issues
copyright:           Copyright (c) 2014-2015, Peter Harpending.
category:            Data, Text, Utility
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md
  LICENSE

library
  hs-source-dirs:      lib/
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:
      base ==4.*
  exposed-modules:
    Tn

executable tn
  hs-source-dirs:      src/
  default-language:    Haskell2010
  ghc-options:         -Wall
  main-is:             Main.hs
  build-depends:     
      base ==4.*        

test-suite spec
  hs-source-dirs:      spec/
  default-language:    Haskell2010
  ghc-options:         -Wall
  main-is:             Spec.hs
  type:                exitcode-stdio-1.0
  build-depends:
      base ==4.*
    , hspec
    , QuickCheck
    , tn

source-repository head
  type:                git
  location:            https://github.com/pharpend/tn.git

source-repository this
  type:                git
  location:            https://github.com/pharpend/tn.git
  tag:                 3.0.0.0
                  
