name:                tn
version:             4.0.0.0
synopsis:            A simple daily journal program
description:
  tn is a simple program to keep journals, licensed under the GPL version 3 or later.
license:             GPL-3
license-file:        LICENSE
author:              Peter Harpending
maintainer:          peter@harpending.org
bug-reports:         https://github.com/pharpend/tn/issues
copyright:           Copyright (c) 2014-2016, Peter Harpending.
category:            Data, Text, Utility
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md
  LICENSE

library
  hs-source-dirs:      lib/
  default-language:    Haskell2010
  ghc-options:         -Wall
  default-extensions:
    LambdaCase
    OverloadedStrings
  build-depends:
      base ==4.8.*
    , aeson
    , text
    , time
    , vector
  exposed-modules:
    Utility.Tn
    Utility.Tn.Types

executable tn
  hs-source-dirs:      src/
  default-language:    Haskell2010
  ghc-options:         -Wall
  main-is:             Main.hs
  build-depends:     
      base ==4.8.*
    , tn

test-suite spec
  hs-source-dirs:      spec/
  default-language:    Haskell2010
  ghc-options:         -Wall
  main-is:             Spec.hs
  type:                exitcode-stdio-1.0
  build-depends:
      base ==4.*
    , hspec
    , QuickCheck
    , tn

source-repository head
  type:                git
  location:            https://github.com/pharpend/tn.git
